--- a/BallClub/BallClub/Info.plist
+++ b/BallClub/BallClub/Info.plist
@@ -63,6 +63,10 @@
 	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>&quot;Ball Club&quot; would like to use your location</string>
+	<key>NSCameraUsageDescription</key>
+	<string>&quot;Ball Club&quot; would like to access your camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>&quot;Ball Club&quot; would like to access your photos</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
